--- a/field_name_prefix_remove.info.yml
+++ b/field_name_prefix_remove.info.yml
@@ -1,4 +1,4 @@
-name: Field name prefix remove
+name: Field Name Prefix Remove
 type: module
 description: Removes field_ prefixes from automatically being created by the Field UI.
 package: Custom
