Issue #3147489 by Project Update Bot, abhaypai: Automated Drupal 9 compatibility fixes

--- a/field_name_prefix_remove.info.yml
+++ b/field_name_prefix_remove.info.yml
@@ -3,4 +3,4 @@ type: module
 description: Removes field_ prefixes from automatically being created by the Field UI.
 package: Custom
 core: 8.x
-version: 8.x-1.0
+core_version_requirement: ^8 || ^9
